add user handler and route
