# api/handler/users.go
@@ -1,0 +1,54 @@
+package handler
+
+import (
+	"github.com/Moji00f/SimpleProject/api/dto"
+	"github.com/Moji00f/SimpleProject/api/helper"
+	"github.com/Moji00f/SimpleProject/config"
+	"github.com/Moji00f/SimpleProject/services"
+	"github.com/gin-gonic/gin"
+	"net/http"
+)
+
+type UserHandler struct {
+	service *services.UserService
+}
+
+func NewUserHandler(cfg *config.Config) *UserHandler {
+	service := services.NewUserService(cfg)
+
+	return &UserHandler{service: service}
+}
+
+// SendOtp godoc
+// @Summary Send otp to user
+// @Description Send otp to user
+// @Tags Users
+// @Accept  json
+// @Produce  json
+// @Param Request body dto.GetOtpRequest true "GetOtpRequest"
+// @Success 201 {object} helper.BaseHttpResponse "Success"
+// @Failure 400 {object} helper.BaseHttpResponse "Failed"
+// @Failure 409 {object} helper.BaseHttpResponse "Failed"
+// @Router /v1/users/send-otp [post]
+func (h *UserHandler) SendOtp(c *gin.Context) {
+	req := new(dto.GetOtpRequest)
+	err := c.ShouldBindJSON(&req)
+
+	if err != nil {
+		c.AbortWithStatusJSON(http.StatusBadRequest,
+			helper.GenerateBaseResponseWithValidationError(nil, false, helper.ValidationError, err),
+		)
+
+		return
+	}
+
+	err = h.service.SendOtp(req)
+	if err != nil {
+		c.AbortWithStatusJSON(helper.TranslateErrorToStatusCode(err),
+			helper.GenerateBaseResponseWithError(nil, false, helper.InternalError, err))
+		return
+	}
+
+	// TODO: call internal SMS service
+	c.JSON(http.StatusCreated, helper.GenerateBaseResponse(nil, true, helper.Success))
+}
