# api/routers/users.go
@@ -1,0 +1,13 @@
+package routers
+
+import (
+	"github.com/Moji00f/SimpleProject/api/handler"
+	"github.com/Moji00f/SimpleProject/config"
+	"github.com/gin-gonic/gin"
+)
+
+func User(router *gin.RouterGroup, cfg *config.Config) {
+	h := handler.NewUserHandler(cfg)
+
+	router.POST("/send-otp", h.SendOtp)
+}
